// Vitest Snapshot v1

exports[`calculate simulations-indépendant > DROM 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 14706
dirigeant . rémunération . cotisations: 5834
dirigeant . rémunération . net: 14166
dirigeant . rémunération . net . après impôt: 14166
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
Notifications affichées : dirigeant . indépendant . cotisations et contributions . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 1505
dirigeant . indépendant . revenu professionnel: 51983
dirigeant . rémunération . cotisations: 23122
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40811
dirigeant . rémunération . totale: 73122
entreprise . charges: 0
entreprise . chiffre d'affaires: 73122
impôt . montant: 9189
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20771
dirigeant . rémunération . cotisations: 8503
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19236
dirigeant . rémunération . totale: 28503
entreprise . charges: 0
entreprise . chiffre d'affaires: 28503
impôt . montant: 764
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20771
dirigeant . rémunération . cotisations: 8521
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19236
dirigeant . rémunération . totale: 28521
entreprise . charges: 0
entreprise . chiffre d'affaires: 28521
impôt . montant: 764
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 51980
dirigeant . rémunération . cotisations: 23019
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40484
dirigeant . rémunération . totale: 73019
entreprise . charges: 0
entreprise . chiffre d'affaires: 73019
impôt . montant: 9516
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: undefined
dirigeant . indépendant . revenu professionnel: undefined
dirigeant . rémunération . cotisations: undefined
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: undefined
dirigeant . rémunération . totale: undefined
entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52100
dirigeant . rémunération . cotisations: 27496
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40776
dirigeant . rémunération . totale: 77496
entreprise . charges: 0
entreprise . chiffre d'affaires: 77496
impôt . montant: 9224
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52122
dirigeant . rémunération . cotisations: 28281
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40770
dirigeant . rémunération . totale: 78281
entreprise . charges: 0
entreprise . chiffre d'affaires: 78281
impôt . montant: 9230
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52190
dirigeant . rémunération . cotisations: 30801
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40749
dirigeant . rémunération . totale: 80801
entreprise . charges: 0
entreprise . chiffre d'affaires: 80801
impôt . montant: 9251
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52026
dirigeant . rémunération . cotisations: 24756
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40799
dirigeant . rémunération . totale: 74756
entreprise . charges: 0
entreprise . chiffre d'affaires: 74756
impôt . montant: 9201
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52026
dirigeant . rémunération . cotisations: 24756
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40799
dirigeant . rémunération . totale: 74756
entreprise . charges: 0
entreprise . chiffre d'affaires: 74756
impôt . montant: 9201
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 517885
dirigeant . rémunération . cotisations: 158801
dirigeant . rémunération . net: 500000
dirigeant . rémunération . net . après impôt: 280545
dirigeant . rémunération . totale: 658801
entreprise . charges: 0
entreprise . chiffre d'affaires: 658801
impôt . montant: 219455"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 18032
dirigeant . rémunération . cotisations: 12825
dirigeant . rémunération . net: 17175
dirigeant . rémunération . net . après impôt: 16849
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 326
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 18032
dirigeant . rémunération . cotisations: 14025
dirigeant . rémunération . net: 15975
dirigeant . rémunération . net . après impôt: 15649
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 326
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20787
dirigeant . rémunération . cotisations: 10025
dirigeant . rémunération . net: 19975
dirigeant . rémunération . net . après impôt: 19209
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 766
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 14206
dirigeant . rémunération . cotisations: 6334
dirigeant . rémunération . net: 13666
dirigeant . rémunération . net . après impôt: 13666
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 227123
dirigeant . rémunération . cotisations: 81020
dirigeant . rémunération . net: 218980
dirigeant . rémunération . net . après impôt: 138584
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 80396"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 223623
dirigeant . rémunération . cotisations: 84520
dirigeant . rémunération . net: 215480
dirigeant . rémunération . net . après impôt: 136658
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 78822"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 135
dirigeant . rémunération . cotisations: 1287
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 1387
entreprise . charges: 0
entreprise . chiffre d'affaires: 1387
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 104
dirigeant . rémunération . cotisations: 150
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 250
entreprise . charges: 0
entreprise . chiffre d'affaires: 250
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 830
dirigeant . rémunération . cotisations: 431
dirigeant . rémunération . net: 800
dirigeant . rémunération . net . après impôt: 800
dirigeant . rémunération . totale: 1231
entreprise . charges: 0
entreprise . chiffre d'affaires: 1231
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 41493
dirigeant . rémunération . cotisations: 4726
dirigeant . rémunération . net: 40274
dirigeant . rémunération . net . après impôt: 34232
dirigeant . rémunération . totale: 45000
entreprise . charges: 0
entreprise . chiffre d'affaires: 45000
impôt . montant: 6042
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 7011
dirigeant . rémunération . cotisations: 2230
dirigeant . rémunération . net: 6770
dirigeant . rémunération . net . après impôt: 6770
dirigeant . rémunération . totale: 9000
entreprise . charges: 0
entreprise . chiffre d'affaires: 9000
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 920
dirigeant . indépendant . revenu professionnel: 9260
dirigeant . rémunération . cotisations: 1009
dirigeant . rémunération . net: 8991
dirigeant . rémunération . net . après impôt: 8991
dirigeant . rémunération . totale: 10000
entreprise . charges: 0
entreprise . chiffre d'affaires: 10000
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13365
dirigeant . rémunération . cotisations: 2039
dirigeant . rémunération . net: 12961
dirigeant . rémunération . net . après impôt: 12961
dirigeant . rémunération . totale: 15000
entreprise . charges: 0
entreprise . chiffre d'affaires: 15000
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 39281
dirigeant . rémunération . cotisations: 17208
dirigeant . rémunération . net: 37792
dirigeant . rémunération . net . après impôt: 32414
dirigeant . rémunération . totale: 55000
entreprise . charges: 0
entreprise . chiffre d'affaires: 55000
impôt . montant: 5378
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 72163
dirigeant . rémunération . cotisations: 30549
dirigeant . rémunération . net: 69451
dirigeant . rémunération . net . après impôt: 56373
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 13078
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 72163
dirigeant . rémunération . cotisations: 30549
dirigeant . rémunération . net: 69451
dirigeant . rémunération . net . après impôt: 56373
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 13078
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20771
dirigeant . rémunération . cotisations: 8503
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19398
dirigeant . rémunération . totale: 28503
entreprise . charges: 0
entreprise . chiffre d'affaires: 28503
impôt . montant: 602
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 51983
dirigeant . rémunération . cotisations: 23122
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41787
dirigeant . rémunération . totale: 73122
entreprise . charges: 0
entreprise . chiffre d'affaires: 73122
impôt . montant: 8213
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20771
dirigeant . rémunération . cotisations: 8503
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 17923
dirigeant . rémunération . totale: 28503
entreprise . charges: 0
entreprise . chiffre d'affaires: 28503
impôt . montant: 2077
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 671
dirigeant . rémunération . cotisations: 1380
dirigeant . rémunération . net: 620
dirigeant . rémunération . net . après impôt: 620
dirigeant . rémunération . totale: 2000
entreprise . charges: 0
entreprise . chiffre d'affaires: 2000
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42296
dirigeant . rémunération . cotisations: 19330
dirigeant . rémunération . net: 40670
dirigeant . rémunération . net . après impôt: 35656
dirigeant . rémunération . totale: 60000
entreprise . charges: 0
entreprise . chiffre d'affaires: 60001
impôt . montant: 5014
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4181
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14181
entreprise . charges: 0
entreprise . chiffre d'affaires: 14181
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4181
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14181
entreprise . charges: 1000
entreprise . chiffre d'affaires: 15181
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42794
dirigeant . rémunération . cotisations: 19588
dirigeant . rémunération . net: 41148
dirigeant . rémunération . net . après impôt: 3000
dirigeant . rémunération . totale: 60736
entreprise . charges: 0
entreprise . chiffre d'affaires: 60732
impôt . montant: 5148
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13962
dirigeant . rémunération . cotisations: 5551
dirigeant . rémunération . net: 13449
dirigeant . rémunération . net . après impôt: 13449
dirigeant . rémunération . totale: 19000
entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13220
dirigeant . rémunération . cotisations: 5266
dirigeant . rémunération . net: 12734
dirigeant . rémunération . net . après impôt: 12734
dirigeant . rémunération . totale: 18000
entreprise . charges: 2000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 547
dirigeant . rémunération . cotisations: 1358
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
dirigeant . rémunération . totale: 1858
entreprise . charges: 0
entreprise . chiffre d'affaires: 1858
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1063
dirigeant . rémunération . cotisations: 1448
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
dirigeant . rémunération . totale: 2448
entreprise . charges: 0
entreprise . chiffre d'affaires: 2448
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1580
dirigeant . rémunération . cotisations: 1540
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
dirigeant . rémunération . totale: 3040
entreprise . charges: 0
entreprise . chiffre d'affaires: 3040
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 2096
dirigeant . rémunération . cotisations: 1629
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
dirigeant . rémunération . totale: 3629
entreprise . charges: 0
entreprise . chiffre d'affaires: 3629
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5192
dirigeant . rémunération . cotisations: 2193
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
dirigeant . rémunération . totale: 7193
entreprise . charges: 0
entreprise . chiffre d'affaires: 7193
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4181
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14181
entreprise . charges: 0
entreprise . chiffre d'affaires: 14181
impôt . montant: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 103803
dirigeant . rémunération . cotisations: 40177
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 72490
dirigeant . rémunération . totale: 140177
entreprise . charges: 0
entreprise . chiffre d'affaires: 140177
impôt . montant: 27510"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1033712
dirigeant . rémunération . cotisations: 241655
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 527790
dirigeant . rémunération . totale: 1241655
entreprise . charges: 0
entreprise . chiffre d'affaires: 1241655
impôt . montant: 472210"
`;
